# algorithm-c

./: CMakeLists.txt
src/: main.c
src/array/: array.h
src/sort/: sort.c  sort.h  util.c  util.h
src/stack/: stack.c  stack.h
test/: test_sort.c  test_sort.h  test_stack.c  test_stack.h
